=========================
2005-06-23 01:13:21 v0_70
=========================

  2005-06-23 01:08:34 (r179) by rcaputo
  t/01_request.t M; HTTP.pm M; t/02_keepalive.t M

    t/02_keepalive.t was incorrectly matching responses to their
    corresponding tests. The result was a near-infinite loop between
    tests 6 and 7. This commit resolves that issue, shaving about 120
    seconds off the tests.
    
    t/01_request.t ambiguously used GET and POST. I added parens so that
    the parameters are explicit.
    
    HTTP.pm wasn't passing a timeout parameter from the request through
    to Client::Keepalive. I thought this might also result in tests that
    ran longer than they should. Anyway, it seems to be more proper
    behavior. 

  2005-06-22 16:22:17 (r178) by rcaputo
  t/01_request.t M; t/03_head_filter.t M; t/05_request.t M;
  t/06_factory.t M; HTTPChunk.pm M; Request.pm M; t/04_chunk_filter.t M;
  Makefile.PL M; HTTP.pm M; RequestFactory.pm M; t/02_keepalive.t M;
  HTTPHead.pm M

    Add Id tags, and set the svn:keywords property on files. Changed the
    tabbed indents to hard spaces, and tidy up the resulting mess. 

  2005-06-21 17:53:32 (r177) by rcaputo
  t/03_head_filter.t M; META.yml D; MANIFEST M; Makefile.PL M; CHANGES D;
  mylib D

    The SSL dependencies moved over to POE::Component::Client::Keepalive,
    so we were able to remove ExtUtils::AutoInstall (and the entire mylib
    directory). Cleaned up the MANIFEST and Makefile.PL to reflect that.
    
    Modified Makefile.PL to use svn-log.perl instead of cvs-log.perl.
    
    Removed CHANGES and META.yml from the repository since they're
    automatically generated at "make dist" time. 

  2005-05-11 17:25:13 (r176) by martijn; RequestFactory.pm M

    documentation skeleton for RequestFactory 

  2005-05-11 16:02:13 (r175) by martijn; Request.pm M

    a redirect response can have content, so don't move to RS_DONE 

  2005-05-11 16:02:03 (r174) by martijn