@@ -1,4 +1,4 @@
-# $Id: HTTP.pm 179 2005-06-23 01:08:34Z rcaputo $
+# $Id: HTTP.pm 181 2005-06-27 05:33:49Z rcaputo $
 
 package POE::Component::Client::HTTP;
 
@@ -11,7 +11,7 @@ sub DEBUG         () { 0 }
 sub DEBUG_DATA    () { 0 }
 
 use vars qw($VERSION);
-$VERSION = '0.70';
+$VERSION = '0.7001';
 
 use Carp qw(croak);
 use POSIX;
