@@ -1,3 +1,15 @@
+===========================
+2005-06-27 05:36:25 v0_7001
+===========================
+
+  2005-06-27 05:33:49 (r181) by rcaputo
+  t/03_head_filter.t M; t/04_chunk_filter.t M; HTTP.pm M
+
+    Remove POE::Filter::XML from the tests. It appears not to be needed,
+    and it causes the tests to fail because it's not a prerequisite for
+    this distribution. Bump the version in HTTP.pm for a minor fix
+    release. 
+
 =========================
 2005-06-23 01:13:21 v0_70
 =========================
